--- a/HomePage.html
+++ b/HomePage.html
@@ -4,7 +4,7 @@
 <p lang="en"></p>
 <html>
     <head>
-
+        <link rel="stylesheet" href="HomePage.css">
     </head>
     <body>
         <button type="submit">≡</button>
