login page styling

--- a/Login-Page.html
+++ b/Login-Page.html
@@ -5,24 +5,25 @@
 <html>
 <head>
   <title>Page Title</title>
+  <link rel="stylesheet" type="text/css" href="Login-Page.css" />
 </head>
 <body>
-  <h1>Welcome To Gym name</h1>
+  <h1 class="Welcome">Welcome!</h1>
+  <h1 class="GymFit">To Gym Fit</h1>
   <h2>Login</h2>
-  <label>Login with either your username or email address</label>
   <form>
 <!--Email Address-->
-    <p><label>Email Address / Username</label></p>
-    <p><span><input data-bind="value: email" data-bind="value: username" text="email/username" placeholder="Enter Username / Email"/></span></p>
+    <p class="TextAboveInputBox"><label>Email Address / Username</label></p>
+    <p><span><input class="InputBox" data-bind="value: email" data-bind="value: username" text="email/username" placeholder="Enter Username / Email"/></span></p>
 <!--Password-->
-    <p> <label>Password</label> </p>
-    <p><span><input data-bind="value: password" type="password" placeholder="Enter Password"/></span></p>
+    <p class="TextAboveInputBox"> <label>Password</label> </p>
+    <p><span><input class="InputBox" data-bind="value: password" type="password" placeholder="Enter Password"/></span></p>
 <!--Forgot Password-->
     <p><label></label><button type="submit">Forgot Password?</button></p>
 <!--Login-Button-->
-    <p><button type="submit">Login</button></p>
+    <p><button href="HomePage.html" type="submit" class="ButtonStyle">Login</button></p>
 <!--Don't Have An Account-->
-    <p><button type="submit">Don't Have An Account?</button></p>
+    <p><a href="">Don't Have An Account?</a>
   </form>
 </body>
 </html>
