--- a/HomePage.html
+++ b/HomePage.html
@@ -4,10 +4,13 @@
 <p lang="en"></p>
 <html>
     <head>
-
+        <link rel="stylesheet" type="text/css" href="HomePage.css" />
     </head>
     <body>
-        <button type="submit">≡</button>
+        <button class="SideBarButton" class="relative" type="submit">≡</button>
         <h1>Home</h1>
+        <p1>
+            sample text, testing the functionality of fonts
+        </p1>
     </body>
 </html>
