--- a/Login-Page.html
+++ b/Login-Page.html
@@ -23,7 +23,7 @@
 <!--Login-Button-->
     <p><button href="HomePage.html" type="submit" class="ButtonStyle">Login</button></p>
 <!--Don't Have An Account-->
-    <p><a href="">Don't Have An Account?</a>
+    <p><a href="Create-Account.html">Don't Have An Account?</a>
   </form>
 </body>
 </html>
