--- a/Login-Page.html
+++ b/Login-Page.html
@@ -10,20 +10,18 @@
 <body>
   <h1 class="Welcome">Welcome!</h1>
   <h1 class="GymFit">To Gym Fit</h1>
-  <h2>Login</h2>
+  <h2 class="Login">Login</h2>
   <form>
 <!--Email Address-->
-    <p class="TextAboveInputBox"><label>Email Address / Username</label></p>
     <p><span><input class="InputBox" data-bind="value: email" data-bind="value: username" text="email/username" placeholder="Enter Username / Email"/></span></p>
 <!--Password-->
-    <p class="TextAboveInputBox"> <label>Password</label> </p>
     <p><span><input class="InputBox" data-bind="value: password" type="password" placeholder="Enter Password"/></span></p>
-<!--Forgot Password-->
-    <p><label></label><button type="submit">Forgot Password?</button></p>
 <!--Login-Button-->
     <p><button href="HomePage.html" type="submit" class="ButtonStyle">Login</button></p>
 <!--Don't Have An Account-->
     <p><a href="Create-Account.html">Don't Have An Account?</a>
+<!--Forgot Password PLACEHOLDER-->
+    <p><a href="https://www.w3schools.com">Forgot Password?</a>
   </form>
 </body>
 </html>
