--- a/Login-Page.html
+++ b/Login-Page.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" type="text/css" href="Login-Page.css" />
 </head>
 <body>
-  <h1 class="Welcome">Welcome!</h1>
-  <h1 class="GymFit">To Gym Fit</h1>
+  <h1 class="Welcome">Welcome to</h1>
+  <h1 class="GymFit">Gym Fit!</h1>
   <h2 class="Login">Login</h2>
   <form>
 <!--Email Address-->
