--- a/Login-Page.html
+++ b/Login-Page.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+  </style>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <p lang="en"></p>
@@ -8,8 +11,8 @@
   <link rel="stylesheet" type="text/css" href="Login-Page.css" />
 </head>
 <body>
-  <h1 class="Welcome">Welcome to</h1>
-  <h1 class="GymFit">Gym Fit!</h1>
+  <h1 class="Welcome">Welcome!</h1>
+  <h1 class="GymFit">To Gym Fit</h1>
   <h2 class="Login">Login</h2>
   <form>
 <!--Email Address-->
