--- a/Create-Account.html
+++ b/Create-Account.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+    </style>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <p></p>
