--- a/Create-Account.html
+++ b/Create-Account.html
@@ -4,7 +4,7 @@
 <p></p>
 <html>
 <head>
-  <title>Page Title</title>
+  <title>Create Account</title>
   <link rel="stylesheet" href="Create-Account.css">
 </head>
 <body>
