--- a/Login-Page.html
+++ b/Login-Page.html
@@ -4,7 +4,7 @@
 <p lang="en"></p>
 <html>
 <head>
-  <title>Page Title</title>
+  <title>Login</title>
   <link rel="stylesheet" type="text/css" href="Login-Page.css" />
 </head>
 <body>
@@ -20,8 +20,6 @@
     <p><button href="HomePage.html" type="submit" class="ButtonStyle">Login</button></p>
 <!--Don't Have An Account-->
     <p><a href="Create-Account.html">Don't Have An Account?</a>
-<!--Forgot Password PLACEHOLDER LINK-->
-    <p><a href="https://www.w3schools.com">Forgot Password?</a>
   </form>
 </body>
 </html>
