--- a/Create-Account.html
+++ b/Create-Account.html
@@ -1,14 +1,74 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-  <title>Create Account</title>
-  <link rel="stylesheet" href="Create-Account.css">
-  <style>
+<style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
-</style>
+    </style>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<p></p>
+<html>
+<head>
+  <title>Create Account</title>
+  <style>
+    .Welcome{
+    font-weight: bold;
+    font-family: 'Poppins', sans-serif;
+    font-size: 50px;
+    margin-top: 10px;
+    color: #000000;
+    }
+    .GymFit{
+        font-weight: bold;
+        font-family: 'Poppins', sans-serif;
+        font-size: 50px;
+        margin-top: -45px;
+        color: #E75946;
+    }
+    .CreateAccount{
+        font-weight: bold;
+        font-family:'Poppins', sans-serif;
+        font-size: 25px;
+        color: #000000;
+    }
+    ::placeholder{
+        color: #E75946;
+    }
+    body{
+        background-color: #FFF6E5;
+        text-align: center;
+    }
+    .InputBox {
+        
+        border-color: #475E6B;
+        border-width: 2px;
+        border-radius: 10px;
+        padding: 20px 30px;
+        margin: 20px 0;
+        width: 75%;
+        font-family: 'Poppins', sans-serif;
+        font-size: 15px;
+        background-color: #FFF6E5
+    }
+    .ButtonStyle
+    {
+    font-size: 15px;
+    font-weight: 700;
+    font-family:'Poppins', sans-serif;
+    width: 75%;
+    background-color: #E75946;
+    color: #FFFFFF;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition-duration: 0.5s;
+    }
+
+    .ButtonStyle:hover
+    {
+        box-shadow: 0 12px 10px 0 rgba(255, 0, 0, 0.432), 0 1px 15px 0 rgba(0,0,0,0.19);
+    }
+  </style>
 </head>
 <body>
   <h1 class = "Welcome">Welcome To</h1>
